# project-explorer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: collection_config.py  explorer.yaml  routing.yaml
docs/: Architecture.md  code-intelligence-approach.md  comparison-integration-approach.md  tutorial.md  user-guide.md
explorer/: __init__.py  agentstack_server.py  collection_router.py  config.py  embeddings.py  llm_client.py  multi_collection_store.py  prompt_templates.py  query_cache.py  query_processor.py  rag_system.py  registry.py
explorer/agents/: base.py  code_agent.py  compare_agent.py  conversation_agent.py  dependency_agent.py  doc_agent.py  examples_agent.py  health_agent.py  integration_agent.py  stats_agent.py  tools.py
explorer/cli/: formatters.py  interactive.py  main.py  wizard.py
explorer/dashboard/: graphs.py  terminal_dashboard.py
explorer/github/: analyzer.py  client.py  stats_fetcher.py
explorer/ingestion/: api_parser.py  ast_chunker.py  code_parser.py  code_symbol_extractor.py  data_prep.py  dependency_parser.py  doc_parser.py  incremental.py  notebook_parser.py  pipeline.py
explorer/observability/: feedback_collector.py  metrics_collector.py  mlflow_tracking.py  phoenix_client.py
explorer/surveyors/: __init__.py  base_surveyor.py  egeria_publisher.py  survey_orchestrator.py  survey_report.py  surveyor_design.md
explorer/surveyors/file_classifier/: __init__.py  file_classificaiton.py  file_classifier.py  file_classifier_plan.md  file_classifier_surveyor.py  type_cache.py
explorer/surveyors/sub_surveyors/: __init__.py  api_structure.py  dependency.py  documentation.py  file_structure.py  health.py  language.py  security.py
explorer/tui/: app.py
explorer/web/: app.py
explorer/web/routes/: aliases.py  projects.py  query.py  stats.py  webhook.py
explorer/web/static/: index.html
scripts/: count_vectors.py  eval_retrieval.py  evaluate.py  test_end_to_end.py
tests/: test_agents.py  test_evaluation.py  test_graphs.py  test_incremental.py  test_ingestion.py  test_query_cache.py  test_query_processor.py  test_registry.py  test_web.py
tests/fixtures/: golden_qa.json
