[project]
name = "project-explorer"
version = "0.1.0"
description = "Multi-agent RAG reference implementation for exploring GitHub projects"
readme = "README.md"
authors = [{ name = "Dan Wolfson" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    # Agent framework (from lfai/ML_LLM_Ops — validated stack)
    "agentstack-sdk>=0.6.1",
    "beeai-framework[rag]>=0.1.77",
    "openinference-instrumentation-beeai>=0.1.15",
    # Vector store
    "langchain-milvus>=0.1.10",
    "pymilvus[milvus-lite]>=2.4.0",
    # Embeddings & LLM
    "sentence-transformers>=3.3.0",
    "ollama>=0.4.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    # Document ingestion
    "docling>=2.0.0",
    "nbconvert>=7.16.0",
    "PyGitHub>=2.5.0",
    "httpx>=0.27.0",
    # CLI & terminal UI
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "plotext>=5.3.0",
    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Graphing & data
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "pandas>=2.2.0",
    # Config & persistence
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Observability
    "mlflow>=2.18.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Scheduling & security
    "apscheduler>=3.10.0",
    "cryptography>=43.0.0",
    "textual>=8.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "watchfiles>=1.0.0",
]
phoenix = [
    # Run Phoenix server locally: pip install -e ".[phoenix]"
    "arize-phoenix>=5.0.0",
]
redis = [
    "redis>=5.0.0",
]
ast = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
]

[project.scripts]
project-explorer = "explorer.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["explorer", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
